<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iWantToGoString"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20pt" />

    <TextView
        android:id="@+id/start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromString"
        android:textSize="15pt" />

    <EditText
        android:id="@+id/start_entry"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/startLocationString" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/end_label"
        android:layout_width="72dp"
        android:layout_height="58dp"
        android:text="@string/toString"
        android:textSize="15pt" />

    <EditText
        android:id="@+id/end_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_label"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/endLocationString" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startNavigation"
        android:text="@string/takeMeThereString" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayHelpView"
        android:text="@string/howToUseButtonString" />

</LinearLayout>